# bulkDocReformat

./: Roadmap for DocX Converter.txt  main.py  pyproject.toml
modernizer/: inventory.py  parser.py  populate_template.py  writer.py
samples/legacy/7_written/: QP - 113 Purchasing.docx  QP - 114 Supplier Selection - DRAFT.docx  QP - 115 Supplier Performance.docx  QP - 116 Customer Consigned Material Control.docx  QP - 117 Product Identification, Traceability and Status.docx  QP - 120 Process Setup.docx
samples/legacy/8_table/: QP - 100 Quality Systems.docx  QP - 111 Document Control-Internal.docx  QP - 119 Production Process.docx  QP - 121 Production Equipment Maintenance.docx  QP - 122 Inspection and Testing.docx  QP - 124 Measurement Systems Development and Qualification.docx  QP - 125 Inspection Equipment Control, Maintenance & Calibration.docx
samples/legacy/8_written/: QP - 101 Quality Policy.docx  QP - 102 Business Planning.docx  QP - 103 Customer Satisfaction Measurement.docx  QP - 104 Managment Review Process.docx  QP - 105 Organization.docx  QP - 106 Advance Product Quality Planning.docx  QP - 108 Tooling Design.docx  QP - 109 Tooling Design Verification and Validation.docx
samples/legacy/table_written/: QP - 107 Contract Review.docx
templates/: new_format_template.docx
